--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,12 @@
 appname = groupRegistration
 httpport = 8080
 runmode = dev
+autorender = false
+recoverpanic = false
+copyrequestbody = true
+db.host = 127.0.0.1
+db.user = root
+db.password = "123456"
+db.port = 3306
+db.name = activity
+
