添加日志 以及开团操作

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,10 +4,13 @@ runmode = dev
 autorender = false
 recoverpanic = false
 copyrequestbody = true
+# 数据库配置
 db.host = 127.0.0.1
 db.user = root
 db.password = "123456"
 db.port = 3306
 db.name = activity
 db.timezone = "Asia/Shanghai"
+# 日志文件
+log_file = storage/error.log
 
